# hatn

./: .gitattributes  .gitignore  .gitmodules  .jenkins-dsl  CMakeLists.txt  LOCALIZATION.md  README.md  autoversion.h.in  hatn_jenkins.dsl  jenkins-notes.md  jenkins.dsl  jenkins_dsl
adminserver/: CMakeLists.txt  depends.cmake
adminserver/include/hatn/adminserver/: admindb.h  adminserver.h  adminservice.h  apiadmincontroller.h  appadmincontroller.h  dbmodels.h  localadmincontroller.h  requesttraits.h
adminserver/src/: admindb.cpp  adminserver.cpp  dbmodels.cpp
adminserver/test/: test.cmake  testadmin.cpp
app/: CMakeLists.txt  depends.cmake
app/include/hatn/app/: app.h  appclient.h  appenv.h  apperror.h  apperrorcodes.h  appname.h  baseapp.h  clientbridge.h  eventdispatcher.h  nativebridge.h
app/src/: app.cpp  appenv.cpp  apperror.cpp  baseapp.cpp  clientbridge.cpp  eventdispatcher.cpp  nativebridge.cpp
app/test/: test.cmake  testapp.cpp
clientapp/: CMakeLists.txt  depends.cmake
clientapp/include/hatn/clientapp/: bridgeappcontext.h  bridgemethod.h  clientapp.h  clientappdbmodels.h  clientappdbmodelsprovider.h  clientappdefs.h  clientapperror.h  clientapperrorcodes.h  clientappfilesettings.h  clientappsettings.h  clientbridge.h  confirmationdescriptor.h  crashreporter.h  defaulttopic.h  eventdispatcher.h  feedbackprovider.h  lockingcontroller.h  logsprovider.h  methodgetloggerconfig.h  methodnetworkstatus.h  methodsendlogs.h  methodsetloggerconfig.h  methodsyncdatetime.h  methodupdatesystemca.h  mobileapp.h  mobileplatformcontext.h  networkevent.h  (+4 more)
clientapp/src/: bridgeappcontext.cpp  clientapp.cpp  clientappdbmodelsprovider.cpp  clientapperror.cpp  clientappfilesettings.cpp  clientappsettings.cpp  clientbridge.cpp  contextapp.cpp  crashreporter.cpp  eventdispatcher.cpp  feedbackprovider.cpp  lockingcontroller.cpp  logsprovider.cpp  methodgetloggerconfig.cpp  methodnetworkstatus.cpp  methodsendlogs.cpp  methodsetloggerconfig.cpp  methodsyncdatetime.cpp  methodupdatesystemca.cpp  mobileapp.cpp  mobileplatformcontext.cpp  notificationdispatcher.cpp  systemservice.cpp  testservicedb.cpp
clientserver/: CMakeLists.txt  depends.cmake
clientserver/src/: accountconfigparser.cpp  cachedbmodelsprovider.cpp  clientauthprotocolsharedsecret.cpp  clientserver.cpp  clientservererror.cpp  clientsession.cpp  clientsessionsharedsecret.cpp  defaultauth.cpp  plaintcpclientwithauth.cpp  protomessagemap.cpp
clientserver/test/: test.cmake  testaccountconfig.cpp
clientserver/test/assets/: ciphersuite1.json
common/: CMakeLists.txt  depends.cmake
common/plugins/testplugin/: CMakeLists.txt  depends.cmake
common/src/: application.cpp  appversion.cpp  asiotimer.cpp  bytearray.cpp  classuid.cpp  datetime.cpp  elapsedtimer.cpp  environment.cpp  error.cpp  factory.cpp  format.cpp  interface.cpp  locker.cpp  logger.cpp  memorylockeddata.cpp  multithreadenvironment.cpp  objectguard.cpp  options.cpp  parameters.cpp  plainfile.cpp  plugin.cpp  queue.cpp  random.cpp  sharedlocker.cpp  singleton.cpp  stream.cpp  taskcontext.cpp  thread.cpp  threadcategory.cpp  threadpoolwithqueues.cpp  threadqueueinterface.cpp  threadwithqueue.cpp  timer.cpp  translate.cpp  utf8_tokenize.cpp  utils.cpp
common/src/memorypool/: bucket.cpp  chunk.cpp  memblocksize.cpp  newdeletepool.cpp  pool.cpp  poolcachegen.cpp
common/src/pmr/: allocatorfactory.cpp  poolmemoryresource.cpp
common/test/: test.cmake  testbytearray.cpp  testdatetime.cpp  testenvironment.cpp  testfactory.cpp  testfile.cpp  testfixedbytearray.cpp  testflatmap.cpp  testlogger.cpp  testlru.cpp  testmemorylockeddata.cpp  testmemorypool.cpp  testmetautils.cpp  testplugins.cpp  testpoolmemoryresource.cpp  testresult.cpp  testsimplequeue.cpp  testsmartpointers.cpp  testtaskcontext.cpp  testthread.cpp  testtranslation.cpp
common/test/assets/: help.1251.txt  help.866.txt  help.utf8.txt  string1.1251.txt  string1.866.txt  string2.1251.txt  string2.866.txt  testbytearray.txt
common/test/test-translations/: test1.po  test2.po
common/translations/ru/: hatncommon.po
crypt/plugins/openssl/: CMakeLists.txt  depends.cmake  opensslaead.cpp  opensslasymmetric.cpp  opensslcipher.cpp  opensslcontext.cpp  openssldh.cpp  openssldh1.cpp  openssldigest.cpp  openssldsa.cpp  opensslec.cpp  opensslecdh.cpp  openssled.cpp  opensslerror.cpp  opensslhkdf.cpp  opensslhmac.cpp  opensslmac.cpp  opensslmac1.cpp  opensslmackey.cpp  opensslpbkdf.cpp  opensslplugin.cpp  opensslprivatekey.cpp  opensslpublickey.cpp  opensslrsa.cpp  opensslsessionticketkey.cpp  opensslsignature.cpp  opensslstream.cpp  opensslsymmetric.cpp  opensslx509.cpp  opensslx509certificatestore.cpp  opensslx509chain.cpp
db/plugins/rocksdb/: CMakeLists.txt  depends.cmake
grpcclient/: CMakeLists.txt  depends.cmake
grpcclient/src/: grpcclient.cpp  grpcstream.cpp  grpcstream.h  grpctransport.cpp  grpctransport_p.h
grpcclient/test/: test.cmake  testconnect.cpp  testgrpc.cpp
grpcclient/test/assets/: echo.jsonc  microservice-port-busy.jsonc
network/: CMakeLists.txt  depends.cmake
network/src/: cares.cpp  error.cpp  network.cpp  resolver.cpp  resolverinterface.cpp  resolvershuffle.cpp  socks5client.cpp
network/src/asio/: caresolver.cpp  socket.cpp  tcpserver.cpp  tcpstream.cpp  udpchannel.cpp
network/test/: test.cmake  testresolver.cpp  testtcp.cpp  testudp.cpp
serveradmin/: CMakeLists.txt
serveradmin/src/: admindb.cpp  dbmodels.cpp
serveradmin/test/: test.cmake  testadmin.cpp
serverapp/: CMakeLists.txt  depends.cmake
serverapp/src/: authservice.cpp  encryptedtoken.cpp  localsessioncontroller.cpp  serverapp.cpp  sessiondbmodelsprovider.cpp  sessiontoken.cpp  sharedsecretprotocol.cpp  userdbmodelsprovider.cpp
serverapp/test/: test.cmake  testapp.cpp
test/: CMakeLists.txt  main.cpp  testwrapper.cpp  testwrapper.h
tools/fileencryptor/: CMakeLists.txt  config-example.jsonc
tools/fileencryptor/src/: filecrypt_helpers.h  filecryptbase.cpp  filecryptbase.h  filedecryptor.cpp  filedecryptor_capi.cpp  fileencryptor.cpp  fileencryptor_capi.cpp  main.cpp  maindecrypt.cpp
(+1242 files in other folders)
