PROJECT(hatnlibstest)

SET (TEST_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

ENABLE_TESTING()

INCLUDE(hatn/ConfigExe)
INCLUDE(hatn/ConfigTest)

SET(HEADERS
    ${HATN_COMMON_SRC}/include/hatn/test/pluginlist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/testwrapper.h
)

SET(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/testwrapper.cpp
    ${HATN_COMMON_SRC}/include/hatn/test/multithreadfixture.cpp
)

IF (prograph IN_LIST HATN_MODULES)
    SET(SOURCES
        ${SOURCES}
        ${HATN_PROGRAPH_SRC}/include/hatn/test/threadqfixture.cpp
    )
ENDIF()

IF (HATN_TEST_WRAP_C)
    MESSAGE(STATUS "Building c-wrapped test library")
    ADD_LIBRARY(${PROJECT_NAME} ${LINK_TYPE} ${SOURCES} ${HEADERS})
ELSE(HATN_TEST_WRAP_C)
    MESSAGE(STATUS "Building executable test application")
ENDIF(HATN_TEST_WRAP_C)

INCLUDE_DIRECTORIES(${TEST_BINARY_DIR})
IF (NOT MSVC)
    ADD_COMPILE_OPTIONS(-Wno-sign-compare)
ENDIF()

ADD_CUSTOM_TARGET(${PROJECT_NAME} ALL)

IF (BUILD_ANDROID)
    SET(RESULT_XML_DIR /data/local/tmp/test/result-xml)
    MESSAGE(STATUS "RESULT_XML_DIR on Android ${RESULT_XML_DIR}")
ELSE()
    SET(RESULT_XML_DIR ${BINDIR}/result-xml)
    IF (NOT "$ENV{working_dir}" STREQUAL "")
        SET(RESULT_XML_DIR $ENV{working_dir}/result-xml)
    ENDIF()
    MESSAGE(STATUS "RESULT_XML_DIR ${RESULT_XML_DIR}")
ENDIF()

IF (BUILD_IOS)
    ADD_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE -DTEST_ASSETS_PATH=\"${TEST_BINARY_DIR}\")
    ADD_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE -DTEST_TMP_PATH=\"${TEST_BINARY_DIR}/tmp\")

    IF ("$ENV{HATN_TEST_IOS_DEVICE}" STREQUAL "")
        SET (HATN_TEST_IOS_DEVICE booted)
    ELSE()
        SET (HATN_TEST_IOS_DEVICE $ENV{HATN_TEST_IOS_DEVICE})
    ENDIF()
ENDIF()

TEST_HATN_MODULES(${HATN_MODULES})

CREATE_TEST_CONFIG_FILE()
